# tauri-plugin-aptabase

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  llms.txt  package.json  pnpm-lock.yaml
examples/helloworld/: package.json
examples/helloworld/src/: App.svelte  App.tsx
examples/helloworld/src-tauri/: Cargo.toml  tauri.conf.json
examples/helloworld/src-tauri/capabilities/: desktop.json
examples/helloworld/src-tauri/src/: lib.rs  main.rs
examples/helloworld/src/lib/: Greet.svelte
examples/react-app/: package.json
examples/react-app/src/: App.tsx
examples/react-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-app/src-tauri/src/: main.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: track_event.toml
permissions/schemas/: schema.json
src/: client.rs  commands.rs  config.rs  device.rs  dispatcher.rs  error.rs  lib.rs  state.rs  sys.rs  track_event.rs
src/client/: mod.rs  tests.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  rollup.config.js  tsconfig.json
