[package]
name = "tauri-plugin-aptabase"
version = "1.0.0"
license = "MIT"
description = "Tauri Plugin for Aptabase: Open Source, Privacy-First and Simple Analytics for Mobile, Desktop and Web Apps"
authors = ["Guilherme Oenning"]
edition = "2021"
rust-version = "1.70"
readme = "README.md"
repository = "https://github.com/aptabase/tauri-plugin-aptabase"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-aptabase"

[dependencies]
tauri = "2.7.0"
tokio = "1.47.1"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["json"] }
time = { version = "0.3.41", features = ["formatting"] }
os_info = "3.12.0"
rand = "0.9.2"
log = "0.4.27"
sys-locale = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
