[package]
name = "tauri-plugin-aptabase"
version = "1.0.0"
license = "MIT"
description = "Tauri Plugin for Aptabase: Open Source, Privacy-First and Simple Analytics for Mobile, Desktop and Web Apps"
authors = ["Guilherme Oenning"]
edition = "2021"
rust-version = "1.70"
readme = "README.md"
repository = "https://github.com/aptabase/tauri-plugin-aptabase"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-aptabase"

[dependencies]
tauri = "2.10.2"
tokio = "1.49.0"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
time = { version = "0.3.47", features = ["formatting"] }
os_info = "3.14.0"
rand = "0.10.0"
log = "0.4.29"
sys-locale = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
